# Pokemon

./: CMakeLists.txt  README.md  files.cmake
Resources/Background/: MainMap.txt
Resources/Item/: BuyMoneyList.txt  BuyNameList.txt  ItemName.txt  SellMoneyList.txt
Resources/Lines/: Brock.txt  FightLoading.txt  FirstInGrass.txt  GYM1.txt  GYM2.txt  GameCompleted.txt  Misty.txt  ObtainSkill.txt  OpeningLine.txt  ReplaceSkill.txt
Resources/Map/GYM1/: blocks.txt  event.txt
Resources/Map/GYM2/: blocks.txt  event.txt
Resources/Map/MainMap/: area.txt  blocks.txt  event.txt
Resources/Map/OakLab/: blocks.txt  event.txt
Resources/Map/PlayerHouse1F/: blocks.txt  event.txt
Resources/Map/PlayerHouse2F/: blocks.txt  event.txt
Resources/Map/PokeCenter/: blocks.txt  event.txt
Resources/Map/PokeMart/: blocks.txt  event.txt
Resources/Pokemon/: CatchRate.txt  LearnSet.txt  Levelup.txt  Move.txt  Name.txt  PokeSkill.txt  PokemonAbility.txt  SkillLearn.txt  Type.txt
Resources/Pokemon/PokeSkill/: Poke001.txt  Poke002.txt  Poke003.txt  Poke004.txt  Poke005.txt  Poke006.txt  Poke007.txt  Poke008.txt  Poke009.txt  Poke010.txt  Poke011.txt  Poke012.txt  Poke013.txt  Poke015.txt  Poke016.txt  (+130 more)
Resources/Save/: BromancePokeBag.txt  CharacterData.txt  Items.txt  PokeBag.txt
include/: App.hpp  Block.hpp  Character.hpp  EventManager.hpp  GIF.hpp  Image.hpp  ItemBag.hpp  Map.hpp  MapSystem.hpp  Object.hpp  Pokemon.hpp  PokemonBag.hpp  SFXSystem.hpp  TFBox.hpp  Text.hpp  TextBox.hpp  UsefulFunctions.hpp
include/FightUI/: EvolutionUI.hpp  FightSkillUI.hpp  LoadingUI.hpp  PokeBagUI.hpp
include/UI/: ComputerUI.hpp  FightMainUI.hpp  FightSkillUI.hpp  FightSystemUI.hpp  FightTextUI.hpp  ItemUI.hpp  LoadingUI.hpp  PokeBagUI.hpp  PokeFaintedUI.hpp  PokedexUI.hpp  ReplaceSkillUI.hpp  SettingUI.hpp  ShopUI.hpp
src/: App.cpp  AppEvent.cpp  AppFight.cpp  AppHome.cpp  AppInit.cpp  AppLoading.cpp  AppReadSave.cpp  AppStart.cpp  AppUpdate.cpp  Block.cpp  Character.cpp  EventManager.cpp  GIF.cpp  Image.cpp  ItemBag.cpp  Map.cpp  MapSystem.cpp  Object.cpp  PokeBagUI.cpp  Pokemon.cpp  PokemonBag.cpp  SFXSystem.cpp  TFBox.cpp  Text.cpp  TextBox.cpp  UsefulFunction.cpp  main.cpp
src/FightUI/: EvolutionUI.cpp  FightSkillUI.cpp  LoadingUI.cpp  PokeBagUI.cpp
src/UI/: ComputerUI.cpp  EvolutionUI.cpp  FightMainUI.cpp  FightSkillUI.cpp  FightTextUI.cpp  ItemUI.cpp  LoadingUI.cpp  PokeBagUI.cpp  PokeFaintedUI.cpp  PokedexUI.cpp  ReplaceSkillUI.cpp  SettingUI.cpp  ShopUI.cpp
